knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Updates_Workday__e/Contract_Updates_Workday__e.object-meta.xml
<CustomObject>
    <label>Contract Updates Workday</label>
    <pluralLabel>Contract Updates Workday</pluralLabel>
</CustomObject>