knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Updates_Workday__e/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>