knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Updates_Workday__e/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>