knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract_Updates_Workday__e/fields/Start_Admin_Work_Ahead_of_Clinical_Work__c.field-meta.xml
<CustomField>
    <fullName>Start_Admin_Work_Ahead_of_Clinical_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Admin Work Ahead of Clinical Work</label>
    <type>Checkbox</type>
</CustomField>